Fri Jun 29 19:10:48 2001  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c: Apply patch from Nalin Dahyabhai
	  <nalin@redhat.com> to first zero out the reply array

Fri Jun 29 02:32:01 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: fixes and cleanups to the error display code.

	* daemon/server.c: remove O_APPEND from log file openning since it
	  was being overriden by O_TRUNC anyway.  On crash see if the logfile
	  looks like display being busy.  If it does, tell the user so.  This
	  prevents this case from looking like crashes, and is more
	  informative.  Perhaps we should try starting on the first free
	  display.  That would be good to investigate in the future.

Fri Jun 29 01:22:20 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in:  Apply cleanup patch from drscott@rochester.rr.com
	  (Dean Scott)

Thu Jun 28 18:48:56 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, gui/gdmconfig.(c|glade), gui/gdmchooser.c:
	  Add two keys Broadcast and Hosts to the chooser configuration
	  to allow more fine grained control as to what appears in the
	  chooser.  And to allow listing of hosts not reachable by
	  broadcast.

	* doc/C/gdm.sgml: add docs for the above two keys

	* daemon/choose.c, daemon/gdm.[ch], daemon/slave.c, daemon/xdmcp.c:
	  Fix a race with the daemon not getting the chooesr response in
	  time.  Also move the chooser page from system setup to expert

	* daemon/xdmcp.c: get all local interface addresses and use those
	  for forward query in case we see only loopback as our address.
	  This is useful if you do an indirect query to the local host
	  and choose a remote server.  xdm screws this case up, so we have
	  one up on xdm here.

	* daemon/gdmlogin.c, daemon/gdmchooser.c, daemon/gdmwm.c:  Fix some
	  gdmwm issues.  In the browser window allow Ctrl-F after selecting
	  a face to finger that user and display the result, useful to check
	  if you have new mail or whatnot.  Also strip excluded users before