@@ -1,3 +1,8 @@
+Sun Jul 01 03:53:08 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c: actually get the configurator key, allows
+	  configuration yet again from the greeter.
+
 Fri Jun 29 19:10:48 2001  George Lebl <jirka@5z.com>
 
 	* daemon/verify-pam.c: Apply patch from Nalin Dahyabhai
